feat: add station peak profiles
